2014-10-09  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sparc.h (sparc_opcode): new field `hwcaps2'.
	(HWCAP2_FJATHPLUS): New define.
	(HWCAP2_VIS3B): Likewise.
	(HWCAP2_ADP): Likewise.
	(HWCAP2_SPARC5): Likewise.
	(HWCAP2_MWAIT): Likewise.
	(HWCAP2_XMPMUL): Likewise.
	(HWCAP2_XMONT): Likewise.
	(HWCAP2_NSEC): Likewise.
	(HWCAP2_FJATHHPC): Likewise.
	(HWCAP2_FJDES): Likewise.
	(HWCAP2_FJAES): Likewise.
	Document the new operand kind `{', corresponding to the mcdper
	ancillary state register.
	Document the new operand kind }, which represents frsd floating
	point registers (double precision) which must be the same than
	frs1 in its containing instruction.

2014-09-16  Kuan-Lin Chen <kuanlinchentw@gmail.com>

        * nds32.h: Add new opcode declaration.

2014-09-15  Andrew Bennett  <andrew.bennett@imgtec.com>
	    Matthew Fortune  <matthew.fortune@imgtec.com>

	* mips.h (mips_operand_type): Add new entries: OP_SAME_RS_RT,
	OP_CHECK_PREV and OP_NON_ZERO_REG.  Add descriptions for the MIPS R6
	instruction arguments: -a, -b, -d, -s, -t, -u, -v, -w, -x, -y, -A, -B,
	 +I, +O, +R, +:, +\, +", +;
	(mips_check_prev_operand): New struct.
	(INSN2_FORBIDDEN_SLOT): New define.
	(INSN_ISA32R6): New define.
	(INSN_ISA64R6): New define.
	(INSN_UPTO32R6): New define.
	(INSN_UPTO64R6): New define.
	(mips_isa_table): Add INSN_UPTO32R6 and INSN_UPTO64R6.
	(ISA_MIPS32R6): New define.
	(ISA_MIPS64R6): New define.
	(CPU_MIPS32R6): New define.
	(CPU_MIPS64R6): New define.
	(cpu_is_member): Add cases for CPU_MIPS32R6, and CPU_MIPS64R6.

2014-09-03  Jiong Wang  <jiong.wang@arm.com>

	* aarch64.h (AARCH64_FEATURE_LSE): New feature added.
	(aarch64_opnd): Add AARCH64_OPND_PAIRREG.
	(aarch64_insn_class): Add lse_atomic.
	(F_LSE_SZ): New field added.
	(opcode_has_special_coder): Recognize F_LSE_SZ.

2014-08-26  Maciej W. Rozycki  <macro@codesourcery.com>

	* mips.h: Document the move of `MICROMIPSOP_*_CODE10' from `B'
	over to `+J'.
